# stellar-estate

./: .env  Dockerfile  Makefile  README.md
my-app/: package-lock.json  package.json  tsconfig.json
my-app/app/: layout.tsx  page.tsx
my-app/components/: BuySharesButton.tsx  CreateEscrowButton.tsx  CreateProperty.tsx  Footer.tsx  HeroSection.tsx  Increment.tsx  InvestButton.tsx  InvestmentCard.tsx  Navbar.tsx  PropertyDetails.tsx  Propertycard.tsx  WalletConnect.tsx  dashboard-page.tsx  dashboard.tsx  main-page.tsx  my-investments-page.tsx  properties-page.tsx  property-card.tsx
my-app/config/: contracts.ts  stats.js  webpack.common.js  webpack.dev.js  webpack.prod.js
my-app/context/: PropertyContext.tsx
my-app/contracts/: Cargo.toml
my-app/contracts/.soroban/identity/: your_account_name.toml
my-app/contracts/common/: Cargo.toml
my-app/contracts/common/src/: lib.rs
my-app/contracts/escrow/: Cargo.toml
my-app/contracts/escrow/src/: lib.rs
my-app/contracts/examples/: usage_example.rs
my-app/contracts/increment/: Cargo.toml
my-app/contracts/marketplace/: Cargo.toml
my-app/contracts/marketplace/src/: lib.rs
my-app/contracts/property/: Cargo.toml
my-app/contracts/property/src/: lib.rs
my-app/contracts/shares/: Cargo.toml
my-app/contracts/shares/src/: lib.rs
my-app/contracts/tests/: property_tests.rs  shares_tests.rs
my-app/helpers/: dom.ts  error.ts  format.ts  network.ts  soroban.ts
my-app/hooks/: useEscrow.ts  useIncrement.ts  useInvestments.ts  useMarketplace.ts  useProperty.ts  usePropertyData.ts  useShares.ts  useTransaction.ts  (+1 more)
(+24 files in other folders)
